--- a/LeftSlider/Base.lproj/LaunchScreen.storyboard
+++ b/LeftSlider/Base.lproj/LaunchScreen.storyboard
@@ -30,6 +30,7 @@
                             <constraint firstItem="tku-Xs-xfm" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" id="nV7-LI-tuQ"/>
                         </constraints>
                     </view>
+                    <nil key="simulatedStatusBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
