--- a/LeftSlider/Base.lproj/Main.storyboard
+++ b/LeftSlider/Base.lproj/Main.storyboard
@@ -6,22 +6,34 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--联系人-->
         <scene sceneID="C6g-bI-kBw">
             <objects>
                 <tableViewController storyboardIdentifier="SecondViewController" id="DKq-ME-Gme" customClass="SecondViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="lSw-76-ZLJ">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="lSw-76-ZLJ">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="sectionIndexBackgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="fTW-Gd-m5q">
+                            <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="DKq-ME-Gme" id="z8W-Th-NER"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SECOND_CELL" id="Sgp-R9-2MK">
-                                <rect key="frame" x="0.0" y="114" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="158" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Sgp-R9-2MK" id="cNk-iJ-bKD">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="zhQ-fd-R2s" kind="show" id="DEu-r6-6Ec"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -29,16 +41,50 @@
                             <outlet property="delegate" destination="DKq-ME-Gme" id="BJg-Ok-Pnr"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="biq-De-gIQ"/>
+                    <navigationItem key="navigationItem" title="联系人" id="biq-De-gIQ"/>
+                    <connections>
+                        <outlet property="mySearchBar" destination="fTW-Gd-m5q" id="eI5-a5-wEC"/>
+                        <outlet property="searchDisplayController" destination="etw-sV-0hO" id="T2d-Wt-kCI"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ODx-fn-p59" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="etw-sV-0hO">
+                    <connections>
+                        <outlet property="delegate" destination="DKq-ME-Gme" id="Dvt-X0-cDW"/>
+                        <outlet property="searchBar" destination="fTW-Gd-m5q" id="3u6-K5-7g9"/>
+                        <outlet property="searchContentsController" destination="DKq-ME-Gme" id="qqV-2Y-oSU"/>
+                        <outlet property="searchResultsDataSource" destination="DKq-ME-Gme" id="hjp-9l-2bq"/>
+                        <outlet property="searchResultsDelegate" destination="DKq-ME-Gme" id="vOT-HE-0it"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="2064" y="878"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="PXm-f6-uJe">
+            <objects>
+                <viewController id="zhQ-fd-R2s" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="a4F-AM-ODn"/>
+                        <viewControllerLayoutGuide type="bottom" id="HLw-2x-y24"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yho-bs-t4h">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.98624199629999998" green="0.77968657019999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="fd_prefersNavigationBarHidden" value="NO"/>
+                    </userDefinedRuntimeAttributes>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ivp-Rt-AhJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2882" y="879"/>
         </scene>
         <!--联系人-->
         <scene sceneID="pJ2-uu-6YU">
             <objects>
-                <navigationController id="dL5-4M-AYU" sceneMemberID="viewController">
+                <navigationController id="dL5-4M-AYU" customClass="BaseNavController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="联系人" image="Second_bit" id="cVq-3b-hJn"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="lPU-Q4-YDF">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -53,7 +99,7 @@
             </objects>
             <point key="canvasLocation" x="1244" y="879"/>
         </scene>
-        <!--Root View Controller-->
+        <!--动态-->
         <scene sceneID="47e-s1-fXP">
             <objects>
                 <tableViewController id="tGG-fb-nvp" sceneMemberID="viewController">
@@ -61,9 +107,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="E9l-eV-eKC">
+                            <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="tGG-fb-nvp" id="s4k-DA-aLg"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="THIRDCELL" id="RaO-2w-Kof">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="136" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RaO-2w-Kof" id="rlS-PB-cP9">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -76,16 +130,28 @@
                             <outlet property="delegate" destination="tGG-fb-nvp" id="YNW-Cy-bRs"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="nOw-bo-dyP"/>
+                    <navigationItem key="navigationItem" title="动态" id="nOw-bo-dyP"/>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="Nb4-1D-M1d" id="WZA-gj-HWn"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OVD-QU-RsA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="Nb4-1D-M1d">
+                    <connections>
+                        <outlet property="delegate" destination="tGG-fb-nvp" id="KQn-td-YGW"/>
+                        <outlet property="searchBar" destination="E9l-eV-eKC" id="7Uz-Yv-arE"/>
+                        <outlet property="searchContentsController" destination="tGG-fb-nvp" id="csq-7m-dDS"/>
+                        <outlet property="searchResultsDataSource" destination="tGG-fb-nvp" id="TIQ-Q7-Igg"/>
+                        <outlet property="searchResultsDelegate" destination="tGG-fb-nvp" id="NmD-Fz-BaX"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="2064" y="1711"/>
         </scene>
         <!--动态-->
         <scene sceneID="JCB-hm-XwG">
             <objects>
-                <navigationController id="nUh-oh-dhI" sceneMemberID="viewController">
+                <navigationController id="nUh-oh-dhI" customClass="BaseNavController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="动态" image="Third_bit" id="J01-Sz-igt"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="CDA-T8-v2M">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -172,14 +238,6 @@
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="htj-6P-dFp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="ySf-Dk-Ml8">
-                    <connections>
-                        <outlet property="delegate" destination="ne4-Em-ARm" id="1AW-15-63O"/>
-                        <outlet property="searchContentsController" destination="ne4-Em-ARm" id="iIf-YO-ELN"/>
-                        <outlet property="searchResultsDataSource" destination="ne4-Em-ARm" id="D9Y-j3-jay"/>
-                        <outlet property="searchResultsDelegate" destination="ne4-Em-ARm" id="jAg-Mz-HbO"/>
-                    </connections>
-                </searchDisplayController>
                 <searchDisplayController id="89G-Qt-mi2">
                     <connections>
                         <outlet property="delegate" destination="ne4-Em-ARm" id="nbM-f9-NyS"/>
@@ -192,10 +250,38 @@
             </objects>
             <point key="canvasLocation" x="2064" y="111"/>
         </scene>
+        <!--Table View Controller-->
+        <scene sceneID="JaO-ZP-6pm">
+            <objects>
+                <tableViewController id="m6n-4R-7O3" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="K3U-3f-vcU">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="yCH-SV-Vlu">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yCH-SV-Vlu" id="45F-kp-jBE">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="m6n-4R-7O3" id="ura-4U-AcZ"/>
+                            <outlet property="delegate" destination="m6n-4R-7O3" id="ZWj-2f-sIh"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zk6-rn-foS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2758" y="111"/>
+        </scene>
         <!--消息-->
         <scene sceneID="enR-8L-bqa">
             <objects>
-                <navigationController id="Rdt-pe-j7P" sceneMemberID="viewController">
+                <navigationController id="Rdt-pe-j7P" customClass="BaseNavController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="消息" image="Firsrt_bit" id="lze-QC-JaH"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="qqt-u1-AGa">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
